Move to new structure

--- a/test/Soenneker.Enums.DeployEnvironment.Tests/Soenneker.Enums.DeployEnvironment.Tests.csproj
+++ b/test/Soenneker.Enums.DeployEnvironment.Tests/Soenneker.Enums.DeployEnvironment.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Enums.DeployEnvironment.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Enums.DeployEnvironment.csproj" />
     </ItemGroup>
 
 </Project>
