--- a/test/Soenneker.Enums.DeployEnvironment.Tests/Soenneker.Enums.DeployEnvironment.Tests.csproj
+++ b/test/Soenneker.Enums.DeployEnvironment.Tests/Soenneker.Enums.DeployEnvironment.Tests.csproj
@@ -17,7 +17,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-    </ItemGroup>
+    <PackageReference Include="xUnit.v3" Version="1.0.0" /></ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Soenneker.Enums.DeployEnvironment.csproj" />
