--- a/src/Soenneker.Enums.DeployEnvironment.csproj
+++ b/src/Soenneker.Enums.DeployEnvironment.csproj
@@ -8,12 +8,12 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Description>A SmartEnum with the standard deployment environments</Description>
+        <Description>An enum for standard deployment environments</Description>
         <Version Condition="'$(BUILD_VERSION)' == ''">3.0.0</Version>
         <Version Condition="'$(BUILD_VERSION)' != ''">$(BUILD_VERSION)</Version>
         <AssemblyName>Soenneker.Enums.DeployEnvironment</AssemblyName>
         <PackageId>Soenneker.Enums.DeployEnvironment</PackageId>
-        <PackageTags>smartenum enum deploy environment c# .net dotnet</PackageTags>
+        <PackageTags>intellenum enum deploy environment c# .net dotnet enums</PackageTags>
         <Copyright>Copyright © 2023-2025 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
